feat: attendee edit view

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <nav>
         <a href="/attendees/new">New Attendee Registration</a>
         <a href="./sessions.ejs">Session Management</a>
-        <a href="./attendees.ejs">Attendee Management</a>
+        <a href="/attendees/edit">Attendee Management</a>
     </nav>
 </body>
 </html>
