--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <h1>Regstration Desk</h1>
     <nav>
         <a href="/attendees/new">New Attendee Registration</a>
-        <a href="./sessions.ejs">Session Management</a>
+        <a href="/attendees/registration/edit">Session Management</a>
         <a href="/attendees/edit">Attendee Management</a>
     </nav>
 </body>
